--- a/Giddy Goat Coffee/Giddy Goat Coffee/NewStoryboard.storyboard
+++ b/Giddy Goat Coffee/Giddy Goat Coffee/NewStoryboard.storyboard
@@ -11,24 +11,11 @@
                     <view key="view" contentMode="scaleToFill" id="HyM-J4-1qf">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <imageView translatesAutoresizingMaskIntoConstraints="NO" userInteractionEnabled="NO" contentMode="center" image="bkgd-woodgrain.png" id="AxH-iP-jzP"/>
-                            <imageView translatesAutoresizingMaskIntoConstraints="NO" userInteractionEnabled="NO" contentMode="scaleToFill" image="giddyTitle.png" id="LVZ-yf-Kb8">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="117" id="938-Xd-oxk"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="LVZ-yf-Kb8" firstAttribute="top" secondItem="HyM-J4-1qf" secondAttribute="top" constant="20" symbolic="YES" type="default" id="1O3-R7-AN0"/>
-                            <constraint firstItem="AxH-iP-jzP" firstAttribute="leading" secondItem="HyM-J4-1qf" secondAttribute="leading" type="default" id="4GU-6O-p9s"/>
-                            <constraint firstItem="LVZ-yf-Kb8" firstAttribute="leading" secondItem="HyM-J4-1qf" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="8jO-72-93O"/>
-                            <constraint firstItem="AxH-iP-jzP" firstAttribute="bottom" secondItem="HyM-J4-1qf" secondAttribute="bottom" type="default" id="PMX-i1-GU0"/>
-                            <constraint firstAttribute="trailing" secondItem="LVZ-yf-Kb8" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="T7R-X5-S7b"/>
-                            <constraint firstItem="AxH-iP-jzP" firstAttribute="top" secondItem="HyM-J4-1qf" secondAttribute="top" type="default" id="dni-e4-Lhm"/>
-                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="view" destination="HyM-J4-1qf" id="Bxh-V0-hQT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p90-Sj-om9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -441,6 +428,9 @@ Thanks to Ben &amp; Jen Bell, Owners of The Giddy Goat Coffee House  Rolla, MO t
         <image name="routedAction.png" width="162" height="162"/>
     </resources>
     <classes>
+        <class className="AwesomeMenu" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AwesomeMenu.h"/>
+        </class>
         <class className="GGCDetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCDetailViewController.h"/>
             <relationships>
@@ -460,6 +450,9 @@ Thanks to Ben &amp; Jen Bell, Owners of The Giddy Goat Coffee House  Rolla, MO t
         </class>
         <class className="GGCPunchViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCPunchViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="menu" candidateClass="AwesomeMenu"/>
+            </relationships>
         </class>
         <class className="GGCSecondViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCSecondViewController.h"/>
